# ITV

./: .dockerignore  .env  .env.example  .gitignore  CNAME  Dockerfile  README.md  alias.txt  blacklist.txt  build.gradle  build.gradle.kts  build.spec  channels.json  demo.txt  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  gradle.properties  iptv_cache.db  pyproject.toml  requirements.txt  settings.gradle  settings.gradle.kts  shai.txt  skip.txt  start.sh  stats.json  subscribe.txt  tv.m3u  tv.txt  tv_multi.m3u
android/: build.gradle
app/: build.gradle  build.gradle.kts  proguard-rules.pro
config/: alias.txt  config.yaml  demo.txt  settings.py  subscribe.txt
data/: candidate_pool.json  iptv.db  iptv_cache.db  source_pool.json  stable_sources.json  trend.db
docker/: entrypoint.sh
gui/: __init__.py  main_window.py  styles.py  worker.py
output/: channels.json  guowai.m3u  guowai.txt  guowai_stats.json  shai.txt  stable_sources.json  stats.json  tv.m3u  tv.txt  tv_epg.m3u  tv_lite.m3u  tv_multi.m3u
src/: __init__.py  aggregator.py  alias_matcher.py  blacklist_filter.py  cache_manager.py  candidate_observer.py  classifier.py  config.py  config_loader.py  constants.py  database.py  db.py  db_manager.py  deduplicator.py  demo_filter.py  discoverer.py  fetcher.py  ffmpeg_validator.py  fixed_sources.py  generator.py  generator_enhanced.py  hmtj_source.py  http_client.py  ip_resolver.py  logger.py  logo_matcher.py  main.py  merger.py  models.py  observer.py  orchestrator.py  overseas_filter.py  parser.py  proxy_utils.py  quality_monitor.py  repositories.py  (+7 more)
(+103 files in other folders)
