[project]
name = "iptv-collector"
version = "2.0.0"
description = "IPTV 智能管理平台 - 全自动采集、测速、验证、分类与自治管理"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "tqdm>=4.66.0",
    "pypinyin>=0.49.0",
    "pydantic>=1.10.0",
]

[project.scripts]
iptv-collector = "src.run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
